# python-hexagonal-architecture-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .squawk.toml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml  ty.toml
.claude/: settings.json
.claude/hooks/: ruff-fix.sh
.claude/skills/add-feature/: SKILL.md
.claude/skills/add-migration/: SKILL.md
.claude/skills/check-fix/: SKILL.md
.cursor/rules/: architecture.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  mutation.yml
.semgrep/rules/: commit-authority.yaml
adding-a-feature/: index.html
adr/: index.html
adr/0001-enforce-hexagonal-boundaries-with-import-linter/: index.html
adr/0002-validation-loop-tool-selection/: index.html
adr/0003-unit-of-work-commit-authority/: index.html
adr/0004-utc-timestamps-owned-by-the-domain/: index.html
agent-native/: index.html
architecture/: index.html
comparison/: index.html
docs/: adding-a-feature.md  agent-native.md  architecture.md  comparison.md  faq.md  index.md  llms.txt  toolchain.md  validation-loop.md
docs/adr/: 0000-adr-template.md  0001-enforce-hexagonal-boundaries-with-import-linter.md  0002-validation-loop-tool-selection.md  0003-unit-of-work-commit-authority.md  0004-utc-timestamps-owned-by-the-domain.md  README.md
faq/: index.html
scripts/: update_openapi_snapshot.py
search/: search_index.json
specs/: README.md  TEMPLATE-spec.md  TEMPLATE-tasks.md
src/app/: entrypoint.py  main.py
src/app/application/ports/input/: task_ports.py
src/app/application/ports/output/: logger.py  repository.py  task_repository.py  unit_of_work.py
src/app/application/use_cases/: task_use_cases.py
src/app/domain/: entities.py  exceptions.py  task.py
src/app/infrastructure/: config.py
src/app/infrastructure/db/: __init__.py  base.py  dependencies.py  engine.py  unit_of_work.py
src/app/infrastructure/db/migrations/: env.py
src/app/infrastructure/db/migrations/versions/: 0001_create_tasks_table.py
src/app/infrastructure/db/models/: __init__.py  task.py
src/app/infrastructure/db/repositories/: task_repository.py
src/app/infrastructure/observability/: logger.py  logging.py  telemetry.py
src/app/infrastructure/web/: app.py  exception_handlers.py
src/app/infrastructure/web/controllers/: health.py  tasks.py
src/app/infrastructure/web/middleware/: request_logging.py
src/app/infrastructure/web/schemas/: error.py  task.py
tests/: conftest.py
tests/integration/: conftest.py  test_schemathesis.py
tests/integration/db/: test_migrations.py  test_task_repository.py
tests/integration/web/: test_tasks_api.py
tests/snapshots/: openapi.json
tests/support/: fake_logger.py  fake_unit_of_work.py  in_memory_task_repository.py
tests/unit/: test_app_factory.py  test_openapi_snapshot.py
tests/unit/application/: test_in_memory_task_repository.py  test_task_repository_contract.py  test_task_use_cases.py
tests/unit/domain/: test_task.py
tests/unit/infrastructure/: test_loguru_logger.py  test_task_schema.py
toolchain/: index.html
validation-loop/: index.html
